# projeto-datasus

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/reports/: main.tex  references.bib  setup.tex
docs/reports/sections/: 01_intro.tex  02_metodo.tex  03_qualidade.tex  04_resultados.tex
notebooks/: 01_qualidade_e_limpeza.ipynb  02_analise_univariada.ipynb  02_analise_univariada_auditor.ipynb  03_analise_bivariada.ipynb  04_analise_multivariada.ipynb
src/analysis/: bivariate_analyzer.py  data_quality.py  multivariate_analyzer.py  univariate_analyzer.py  univariate_auditor.py
src/crawler/: scraper.py
src/dashboard/: app.py
src/database_loader/: loader.py
